# Test03ColorDetectRecord

./: CMakeLists.txt
src/: main.cpp
src/detect/include/detect/: detect.h
src/detect/src/: detect.cpp
